@@ -1,3 +1,8 @@
+2007-03-22  Chao-ying Fu  <fu@mips.com>
+
+	* gcc.dg/fixed-ponit/convert.c: Add more tests for conversions from
+	fixed-point numbers to integers.
+
 2007-03-21  Chao-ying Fu  <fu@mips.com>
 
 	* gcc.dg/fixed-ponit/convert.c: Add tests for conversions from
